--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
 actix-web = "4.3.1"
+config = "0.13.3"
 reqwest = "0.11.18"
 serde = { version = "1.0.171", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
@@ -16,6 +17,18 @@ path = "src/lib.rs"
 [[bin]]
 path = "src/main.rs"
 name = "news_pubsub"
+
+[dependencies.sqlx]
+version = "0.7.1"
+default-features = false
+features = [
+  "runtime-tokio-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate"
+]
 
 [profile.release]
 opt-level = 3
