--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ config = "0.13.3"
 reqwest = "0.11.18"
 serde = { version = "1.0.171", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1", features = ["v4", "serde"] }
+chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 
 [lib]
 path = "src/lib.rs"
