--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,7 +1,7 @@
 application_port: 6969
 database:
-  host: "127.0.0.1"
+  host: "localhost"
   port: 5432
-  username: "ishtmeet"
-  password: ""
+  username: "postgres"
+  password: "password"
   database_name: "newsletter"
