--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 tracing = { version = "0.1.37", features = ["log"] }
 tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
 tracing-appender = "0.2.2"
+mongodb = "2.6.0"
+nanoid = "0.4.0"
+tokio-postgres = "0.7.8"
 
 [lib]
 path = "src/lib.rs"
