--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
 tracing = { version = "0.1.37", features = ["log"] }
 tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
 tracing-appender = "0.2.2"
+nanoid = "0.4.0"
+once_cell = "1.18.0"
+secrecy = { version = "0.8.0", features = ["serde"] }
 
 [lib]
 path = "src/lib.rs"
@@ -31,7 +34,7 @@ features = [
   "postgres",
   "uuid",
   "chrono",
-  "migrate"
+  "migrate",
 ]
 
 [profile.release]
